# rust-latency

./: .gitignore  template.yaml
functions/driver/: Cargo.toml
functions/driver/src/: main.rs
functions/hello-world/: Cargo.toml
functions/hello-world/src/: main.rs
functions/worker/: Cargo.toml
functions/worker/src/: main.rs
