[package]
edition = "2021"
name = "driverfunction"
version = "0.1.0"

[[bin]]
name = "handler"
path = "src/main.rs"

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-lambda = "1.20"
aws_lambda_events = "0.13"
lambda_runtime = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
