[package]
edition = "2021"
name = "workerfunction"
version = "0.1.0"

[[bin]]
name = "handler"
path = "src/main.rs"

[dependencies]
aws-config = {version = "1", features = ["behavior-version-latest"] }
aws-sdk-lambda = "1.73.0"
aws-types = "1.3.6"
aws_lambda_events = "0.13"
lambda_runtime = "0.13"
reqwest = {version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
tracing-subscriber = {version = "0.3", features = ["fmt", "json"]}
chrono = { version = "0.4", features = ["serde"] }
